2005-07-17  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-auth.c
	(sbuild_auth_get_home): Add home directory property and get
	function for the session user.
	(sbuild_auth_setupenv): Add HOME to the list of environment
	variables to set if not preserving the old environment.

2005-07-16  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c
	(sbuild_session_run_chroot): Split into two separate functions,
	sbuild_session_run_child() and sbuild_session_wait_for_child().
	(sbuild_session_wait_for_child): Notify the "child-status"
	property on change.

2005-07-11  Roger Leigh  <rleigh@debian.org>

	* TODO: Update.

	* Update gtk-doc documentation.

2005-07-10  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.c (main): Abort earlier if no chroots are
	defined in schroot.conf.

2005-07-09  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.c (parse_options): Move the option entries[]
	array into the function as a static const variable.  Make sure the
	array is terminated by a null option entry, to prevent a segfault
	when parsing the options.

2005-07-08  Roger Leigh  <rleigh@debian.org>

	* TODO: Update.

	* schroot/schroot.c (main): Use new SBUILD_AUTH casts and methods,
	to replace the corresponding SBUILD_SESSION types and methods.

	* SbuildSession derives from SbuildAuth.
	  - The duplicated functionality has been removed from
	    SbuildSession.
	  - SbuildSession overrides the SbuildAuth virtual functions
	    require_auth and session_run.

2005-07-08  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.h: Add sbuild-auth.[ch].

	* schroot/sbuild-marshallers.list: Add new marshaller
	(sbuild_cclosure_marshal_BOOLEAN__BOXED).

	* Split SbuildSession PAM functionality into a separate SbuildAuth
	class, from which SbuildSession is derived.  SbuildAuth handles
	authentication and authorisation using PAM, with hooks for
	customising its behaviour.

2005-07-07  Roger Leigh  <rleigh@debian.org>
